check_error.log
    Checking nasa-wallpaper v2.2.0 (C:\Users\maule\Desktop\repo\nasa-wallpaper)
warning: unused imports: `DynamicImage` and `RgbaImage`
 --> src\text_renderer.rs:1:13
  |
1 | use image::{DynamicImage, Rgba, RgbaImage, GenericImageView};
  |             ^^^^^^^^^^^^        ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> src\text_renderer.rs:11:9
   |
11 |     let mut image = image::load_from_memory(image_bytes)
   |         ----^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0515]: cannot return value referencing temporary value
   --> src\main.rs:144:29
    |
144 |                 .or_else(|| std::env::var("NASA_API_KEY").ok().as_deref())
    |                             ----------------------------------^^^^^^^^^^^
    |                             |
    |                             returns a value referencing data owned by the current function
    |                             temporary value created here

For more information about this error, try `rustc --explain E0515`.
warning: `nasa-wallpaper` (bin "nasa-wallpaper") generated 2 warnings
error: could not compile `nasa-wallpaper` (bin "nasa-wallpaper") due to 1 previous error; 2 warnings emitted
